--- a/index.html
+++ b/index.html
@@ -46,17 +46,17 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="index-multipage.html">Nova blumenau</a>
+					<a class="navbar-brand" href="index.html">Nova blumenau</a>
 				</div>
 				<!-- /.navbar-header -->
 
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav navbar-right">
-						<li class="active"><a href="index-multipage.html">Home</a></li>
+						<li class="active"><a href="index.html">Home</a></li>
 						<li><a href="about.html">Sobre</a></li>
 						<li><a href="service.html">Serviços</a></li>
-						<li><a href="contact.html">Agenda</a></li>
+						<li><a href="agenda.html">Agenda</a></li>
 						<li><a href="portfolio.html">Portifolio</a></li>
 						<li><a href="contact.html">Contato</a></li>
 
@@ -96,7 +96,7 @@
 				<div class="underline purple"></div>
 				<div class="row">
 					<div class="">
-						<img src="assets/images/service.png" alt="service" class="service-img img-responsive">
+						<img src="assets/images/service.png" alt="@todoImagem" class="service-img img-responsive">
 					</div>
 					<div class="col-md-offset-4 col-md-8 col-sm-12 services">
 						<p class="section-item-description"> Nosso espaço está aberto para evento de nas segundas, terças, quartas e sextas-feiras. Possuímos mais de 1000m² contruídos
@@ -183,6 +183,69 @@
 	</section>
 	<!-- /.service -->
 
+	<!-- Fan Facts -->
+	<section class="fun">
+		<div class="container section-wrapper">
+			<h2 class="section-title black">
+				Agenda semanal
+			</h2>
+			<!-- /.section-title -->
+			<div class="underline purple"></div>
+			<div class="row">
+				<div class="col-sm-3 col-xs-6">
+					<div class="fun-box">
+						<div class="number">
+							17/OUT
+						</div>
+						<div class="number-title">
+							TONICO E TINOCO
+						</div>
+					</div>
+					<!-- /.fun-box -->
+				</div>
+				<!-- /.col-md-3 -->
+				<div class="col-sm-3 col-xs-6">
+					<div class="fun-box">
+						<div class="number">
+							18/OUT
+						</div>
+						<div class="number-title">
+							*EVENTO FECHADO
+						</div>
+					</div>
+					<!-- /.fun-box -->
+				</div>
+				<!-- /.col-md-3 -->
+				<div class="col-sm-3 col-xs-6">
+					<div class="fun-box">
+						<div class="number">
+							19/OUT
+						</div>
+						<div class="number-title">
+							SORRISO LINDO
+						</div>
+					</div>
+					<!-- /.fun-box -->
+				</div>
+				<!-- /.col-md-3 -->
+				<div class="col-sm-3 col-xs-6">
+					<div class="fun-box">
+						<div class="number">
+							20/OUT
+						</div>
+						<div class="number-title">
+							TICO E TECO
+						</div>
+					</div>
+					<!-- /.fun-box -->
+				</div>
+				<!-- /.col-md-3 -->
+			</div>
+			<!-- /.row -->
+		</div>
+		<!-- /.container -->
+	</section>
+	<!-- /.fun -->
 
 	<!-- Twitter Feed -->
 	<section class="twitter-feed purple">
@@ -413,6 +476,9 @@
 			<!-- /.row -->
 		</div>
 		<!-- /.container -->
+		<div class="container text-center">
+			<input class="btn btn-sub text-center" type="submit" value="Confira a agenda completa">
+		</div>
 	</section>
 	<!-- /.portfolio -->
 
@@ -429,72 +495,6 @@
 		<!-- /.container -->
 	</section>
 	<!-- /.note -->
-
-
-	<!-- Fan Facts -->
-	<section class="fun">
-		<div class="container section-wrapper">
-			<h2 class="section-title black">
-				Agenda semanal
-			</h2>
-			<!-- /.section-title -->
-			<div class="underline purple"></div>
-			<div class="row">
-				<div class="col-sm-3 col-xs-6">
-					<div class="fun-box">
-						<div class="number">
-							17/OUT
-						</div>
-						<div class="number-title">
-							TONICO E TINOCO
-						</div>
-					</div>
-					<!-- /.fun-box -->
-				</div>
-				<!-- /.col-md-3 -->
-				<div class="col-sm-3 col-xs-6">
-					<div class="fun-box">
-						<div class="number">
-							18/OUT
-						</div>
-						<div class="number-title">
-							*EVENTO FECHADO
-						</div>
-					</div>
-					<!-- /.fun-box -->
-				</div>
-				<!-- /.col-md-3 -->
-				<div class="col-sm-3 col-xs-6">
-					<div class="fun-box">
-						<div class="number">
-							19/OUT
-						</div>
-						<div class="number-title">
-							SORRISO LINDO
-						</div>
-					</div>
-					<!-- /.fun-box -->
-				</div>
-				<!-- /.col-md-3 -->
-				<div class="col-sm-3 col-xs-6">
-					<div class="fun-box">
-						<div class="number">
-							20/OUT
-						</div>
-						<div class="number-title">
-							TICO E TECO
-						</div>
-					</div>
-					<!-- /.fun-box -->
-				</div>
-				<!-- /.col-md-3 -->
-			</div>
-			<!-- /.row -->
-		</div>
-		<!-- /.container -->
-	</section>
-	<!-- /.fun -->
-
 
 	<!-- Footer -->
 	<footer>
