--- a/service.html
+++ b/service.html
@@ -45,17 +45,18 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="#">SIGHT</a>
+					<a class="navbar-brand" href="#">NOVA BLUMENAU</a>
 				</div> <!-- /.navbar-header -->
 
 		    <!-- Collect the nav links, forms, and other content for toggling -->
 			    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="index-multipage.html">home</a></li>
-						<li><a href="about.html">about us</a></li>
-						<li class="active"><a href="service.html">services</a></li>
+						<li><a href="index.html">home</a></li>
+						<li><a href="about.html">sobre</a></li>
+						<li class="active"><a href="service.html">serviços</a></li>
+						<li><a href="agenda.html">Agenda</a></li>
 						<li><a href="portfolio.html">portfolio</a></li>
-						<li><a href="contact.html">contact</a></li>
+						<li><a href="contact.html">contato</a></li>
 					</ul> <!-- /.nav -->
 			    </div><!-- /.navbar-collapse -->
 		  	</div><!-- /.container -->
@@ -67,93 +68,69 @@
 	<section class="section-background">
 		<div class="container">
 			<ol class="breadcrumb">
-				<li><a href="index-multipage.html">Home</a></li>
+				<li><a href="index.html">Home</a></li>
 				<li class="active">&nbsp;service</li>
 			</ol>
 		</div> <!-- /.container -->
 	</section> <!-- /.section-background -->
 
 
-<!-- Our Services -->
-	<section class="service" id="service">
-		<div class="container">
-			<div class="_section-wrapper">
-				<h2 class="section-title black">
-					our services
-				</h2> <!-- /.section-title -->
-				<div class="underline purple"></div>
-				<div class="row">
-					<div class="">
-						<img src="assets/images/service.png" alt="service" class="service-img img-responsive">
-					</div>
-					<div class="col-md-offset-4 col-md-8 col-sm-12 services">
-						<div class="row">
-							<div class="col-xs-6 col-sm-4">
-								<div class="service-item">
-									<h3 class="section-item-title">
-										free delivery
-									</h3>
-									<p class="section-item-detail">
-										The Earth was small, light blue, and so touchingly alone, our home that must be so painful.
-									</p>
-								</div> <!-- /.service-item -->
-							</div>
-							<div class="col-xs-6 col-sm-4">
-								<div class="service-item">
-									<h3 class="section-item-title">
-										refund money
-									</h3>
-									<p class="section-item-detail">
-										The Earth was small, light blue, and so touchingly alone, our home that must be so painful.
-									</p>
-								</div> <!-- /.service-item -->
-							</div>
-							<div class="col-xs-6 col-sm-4">
-								<div class="service-item">
-									<h3 class="section-item-title">
-										24/7 support
-									</h3>
-									<p class="section-item-detail">
-										The Earth was small, light blue, and so touchingly alone, our home that must be so painful.
-									</p>
-								</div> <!-- /.service-item -->
-							</div>
-							<div class="col-xs-6 col-sm-4">
-								<div class="service-item">
-									<h3 class="section-item-title">
-										summer offer
-									</h3>
-									<p class="section-item-detail">
-										The Earth was small, light blue, and so touchingly alone, our home that must be so painful.
-									</p>
-								</div> <!-- /.service-item -->
-							</div>
-							<div class="col-xs-6 col-sm-4">
-								<div class="service-item">
-									<h3 class="section-item-title">
-										winter offer
-									</h3>
-									<p class="section-item-detail">
-										The Earth was small, light blue, and so touchingly alone, our home that must be so painful.
-									</p>
-								</div> <!-- /.service-item -->
-							</div>
-							<div class="col-xs-6 col-sm-4">
-								<div class="service-item">
-									<h3 class="section-item-title">
-										best gift
-									</h3>
-									<p class="section-item-detail">
-										The Earth was small, light blue, and so touchingly alone, our home that must be so painful.
-									</p>
-								</div> <!-- /.service-item -->
-							</div>
-						</div> <!-- /.row -->
-					</div> <!-- /.col-md-6 -->
-				</div> <!-- /.row -->
-			</div> <!-- /.section-wrapper -->
+<!-- About Us -->
+	<section class="about" id="about">
+		<div class="container section-wrapper">
+			<h2 class="section-title black">
+				quem somos
+			</h2> <!-- /.section-title -->
+			<div class="underline purple"></div>	
+			<div class="row">
+				<div class="col-md-3 col-sm-6">
+					<img src="assets/images/about-1.png" alt="about" class="about-img">
+				</div> <!-- /.col-md-3 -->
+				<div class="col-md-3 col-sm-6">
+					<img src="assets/images/about-2.png" alt="about" class="about-img">
+				</div> <!-- /.col-md-3 -->
+
+				<div class="col-md-6 col-sm-12">
+					<p class="about-detail">
+					Com mais de 1.000 m² de área construída, a Sociedade nova Blumenau é o lugar ideal para você que procura um lugar para passar suas horas de lazer.
+					Bem localizada e de fácil acesso você encontrará um estacionamento seguro e amplo com mais de 300 vagas. Nosso espaço esta aberto para eventos particulares, faça seu orçamento.
+					</p> <!-- /.about-detail -->
+				</div> <!-- /.col-md-6 -->
+
+			</div> <!-- /.row -->
+
+			<div class="row">
+			
+				<div class="col-sm-4">
+					<h3 class="section-item-title">
+						Eventos particulares
+					</h3>
+					<p class="section-item-detail">
+						Todas as nossas sextas-feiras estão abertas para eventos particulares, assim como segunda, terça e quartas-feiras.
+						Fique a vontade para entrar em contato conosco através de nosso whats-up, e-mail ou página no facebook. Todos os dados necessários se encontram 
+						na nossa página de contato.
+					</p>
+				</div>
+				<div class="col-sm-4">
+					<h3 class="section-item-title">
+						Shows ao vivo
+					</h3>
+					<p class="section-item-detail">
+						Todos os sábados shows ao vivo com bandas de grande sucesso. Já tendo passado por nós grupos como Candieiro, os 4 Gaudérios, João Luiz Corrêa, Os Bertussi, Tchê Garotos, Garotos de Ouro, Porca Véia, Os Mateadores, Portal do Sul, Chiquito e Bordoneio, Bambaquerê, Banda Fole, Banda Universitária.
+					</p>
+				</div>
+				<div class="col-sm-4">
+					<h3 class="section-item-title">
+						Tardes dançantes
+					</h3>
+					<p class="section-item-detail">
+						Um ótimo café colonial acompanhado com muita dança nas Quintas e Domingos.
+					</p>
+				</div>	
+			</div> <!-- /.row -->
+
 		</div> <!-- /.container -->
-	</section> <!-- /.service -->
+	</section> <!-- /.about -->
 
 
 <!-- Testimonial -->
