--- a/about.html
+++ b/about.html
@@ -44,17 +44,18 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="#">SIGHT</a>
+					<a class="navbar-brand" href="#">NOVA BLUMENAU</a>
 				</div> <!-- /.navbar-header -->
 
 		    <!-- Collect the nav links, forms, and other content for toggling -->
 			    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="index-multipage.html">home</a></li>
-						<li class="active"><a href="about.html">about us</a></li>
-						<li><a href="service.html">services</a></li>
+						<li><a href="index.html">home</a></li>
+						<li class="active"><a href="about.html">sobre</a></li>
+						<li><a href="service.html">serviços</a></li>
+						<li><a href="agenda.html">agenda</a></li>
 						<li><a href="portfolio.html">portfolio</a></li>
-						<li><a href="contact.html">contact</a></li>
+						<li><a href="contact.html">contato</a></li>
 					</ul> <!-- /.nav -->
 			    </div><!-- /.navbar-collapse -->
 		  	</div><!-- /.container -->
@@ -66,8 +67,8 @@
 	<section class="section-background">
 		<div class="container">
 			<ol class="breadcrumb">
-				<li><a href="index-multipage.html">Home</a></li>
-				<li class="active">&nbsp;about us</li>
+				<li><a href="index.html">Home</a></li>
+				<li class="active">&nbsp;sobre</li>
 			</ol>
 		</div> <!-- /.container -->
 	</section> <!-- /.section-background -->
@@ -77,7 +78,7 @@
 	<section class="about" id="about">
 		<div class="container section-wrapper">
 			<h2 class="section-title black">
-				about us
+				quem somos
 			</h2> <!-- /.section-title -->
 			<div class="underline purple"></div>	
 			<div class="row">
@@ -90,38 +91,11 @@
 
 				<div class="col-md-6 col-sm-12">
 					<p class="about-detail">
-						The Earth was small, light blue, and so touchingly alone, our home that must be defended like a holy relic. The Earth was absolutely round. I believe I never knew what  saw for the first time how beautiful our planet is. Mankind, let us preserve and increase this beauty, and not destroy it!Houston.landed.We are all connected; To each other, biologically. To the earth, chemically. To the rest of the universe atomically. The Earth was absolutely round. I believe I never knew what  saw for the first time how beautiful our planet is. 
+					Com mais de 1.000 m² de área construída, a Sociedade nova Blumenau é o lugar ideal para você que procura um lugar para passar suas horas de lazer.
+					Bem localizada e de fácil acesso você encontrará um estacionamento seguro e amplo com mais de 300 vagas. Nosso espaço esta aberto para eventos particulares, faça seu orçamento.
 					</p> <!-- /.about-detail -->
 				</div> <!-- /.col-md-6 -->
 
-			</div> <!-- /.row -->
-
-			<div class="row">
-			
-				<div class="col-sm-4">
-					<h3 class="section-item-title">
-						we care
-					</h3>
-					<p class="section-item-detail">
-						The Earth was small, light blue, and so touchingly alone, our home that must be defended like a holy relic. The Earth was absolutely round.
-					</p>
-				</div>
-				<div class="col-sm-4">
-					<h3 class="section-item-title">
-						we deliver
-					</h3>
-					<p class="section-item-detail">
-						The Earth was small, light blue, and so touchingly alone, our home that must be defended like a holy relic. The Earth was absolutely round.
-					</p>
-				</div>
-				<div class="col-sm-4">
-					<h3 class="section-item-title">
-						we're creative
-					</h3>
-					<p class="section-item-detail">
-						The Earth was small, light blue, and so touchingly alone, our home that must be defended like a holy relic. The Earth was absolutely round.
-					</p>
-				</div>	
 			</div> <!-- /.row -->
 
 		</div> <!-- /.container -->
@@ -132,7 +106,64 @@
 	<section class="team">
 		<div class="container section-wrapper">
 			<h2 class="section-title black">
-				our team
+				Nosso time
+			</h2> <!-- /.section-title -->
+			<div class="underline purple"></div>
+			<div class="row">
+				<div class="col-sm-3 col-xs-6">
+					<div class="team-item">
+						<img src="assets/images/team-1.png" alt="team-image" class="team-img">
+						<h4 class="team-item-name">
+							Vivi
+						</h4>
+						<p class="team-item-id">
+							founder
+						</p>
+					</div> <!-- /.team-item -->
+				</div> <!-- /.col-md-3 -->
+
+				<div class="col-sm-3 col-xs-6">
+					<div class="team-item">
+						<img src="assets/images/team-2.png" alt="team-image" class="team-img">
+						<h4 class="team-item-name">
+							Bru Bru
+						</h4>
+						<p class="team-item-id">
+							founder
+						</p>
+					</div> <!-- /.team-item -->
+				</div> <!-- /.col-md-3 -->
+				<div class="col-sm-3 col-xs-6">
+					<div class="team-item">
+						<img src="assets/images/team-3.png" alt="team-image" class="team-img">
+						<h4 class="team-item-name">
+							LuLu
+						</h4>
+						<p class="team-item-id">
+							founder
+						</p>
+					</div> <!-- /.team-item -->
+				</div> <!-- /.col-md-3 -->
+				<div class="col-sm-3 col-xs-6">
+					<div class="team-item">
+						<img src="assets/images/team-4.png" alt="team-image" class="team-img">
+						<h4 class="team-item-name">
+							Jeneflr White
+						</h4>
+						<p class="team-item-id">
+							founder
+						</p>
+					</div> <!-- /.team-item -->
+			</div> <!-- /.row -->
+		</div> <!-- /.container -->
+	</section> <!-- /.team -->
+
+
+<!-- Banda da casa -->
+	<section class="team">
+		<div class="container section-wrapper">
+			<h2 class="section-title black">
+				Banda da casa
 			</h2> <!-- /.section-title -->
 			<div class="underline purple"></div>
 			<div class="row">
@@ -180,55 +211,10 @@
 							founder
 						</p>
 					</div> <!-- /.team-item -->
-				</div> <!-- /.col-md-3 -->
-				<div class="col-sm-3 col-xs-6">
-					<div class="team-item">
-						<img src="assets/images/team-5.png" alt="team-image" class="team-img">
-						<h4 class="team-item-name">
-							David Martin
-						</h4>
-						<p class="team-item-id">
-							founder
-						</p>
-					</div> <!-- /.team-item -->
-				</div> <!-- /.col-md-3 -->
-				<div class="col-sm-3 col-xs-6">
-					<div class="team-item">
-						<img src="assets/images/team-6.png" alt="team-image" class="team-img">
-						<h4 class="team-item-name">
-							Reena Scot
-						</h4>
-						<p class="team-item-id">
-							founder
-						</p>
-					</div> <!-- /.team-item -->
-				</div> <!-- /.col-md-3 -->
-				<div class="col-sm-3 col-xs-6">
-					<div class="team-item">
-						<img src="assets/images/team-7.png" alt="team-image" class="team-img">
-						<h4 class="team-item-name">
-							Paul Smith
-						</h4>
-						<p class="team-item-id">
-							founder
-						</p>
-					</div> <!-- /.team-item -->
-				</div> <!-- /.col-md-3 -->
-				<div class="col-sm-3 col-xs-6">
-					<div class="team-item">
-						<img src="assets/images/team-8.png" alt="team-image" class="team-img">
-						<h4 class="team-item-name">
-							Jeneflr White
-						</h4>
-						<p class="team-item-id">
-							founder
-						</p>
-					</div> <!-- /.team-item -->
-				</div> <!-- /.col-md-3 -->
-				
 			</div> <!-- /.row -->
 		</div> <!-- /.container -->
 	</section> <!-- /.team -->
+
 
 
 <!-- Testimonial -->
