--- a/portfolio.html
+++ b/portfolio.html
@@ -51,11 +51,11 @@
 		    <!-- Collect the nav links, forms, and other content for toggling -->
 			    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="index-multipage.html">home</a></li>
-						<li><a href="about.html">about us</a></li>
-						<li><a href="service.html">services</a></li>
+						<li><a href="index.html">home</a></li>
+						<li><a href="about.html">sobre</a></li>
+						<li><a href="service.html">serviços</a></li>
 						<li class="active"><a href="portfolio.html">portfolio</a></li>
-						<li><a href="contact.html">contact</a></li>
+						<li><a href="contact.html">contato</a></li>
 					</ul> <!-- /.nav -->
 			    </div><!-- /.navbar-collapse -->
 		  	</div><!-- /.container -->
@@ -67,7 +67,7 @@
 	<section class="section-background">
 		<div class="container">
 			<ol class="breadcrumb">
-				<li><a href="index-multipage.html">Home</a></li>
+				<li><a href="index.html">Home</a></li>
 				<li class="active">&nbsp;portfolio</li>
 			</ol>
 		</div> <!-- /.container -->
